# doc-transformer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  __main__.py  cli.py  converter.py  formatter.py
tests/: test_converter.py  test_formatter.py
